main footer working

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "4.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "clsx": "latest",
-    "next": "latest",
-    "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-
     "@date-io/date-fns": "1.x",
+    "@material-ui/core": "latest",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/system": "^4.9.14",
+    "clsx": "latest",
     "date-fns": "^2.16.1",
     "formik": "^2.1.6",
     "formik-material-ui": "^3.0.0",
     "formik-material-ui-pickers": "^0.0.11",
+    "next": "latest",
+    "prop-types": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-facebook": "^8.1.4",
     "react-material-ui-carousel": "^2.0.0",
     "react-player": "^2.6.2",
     "react-swipeable-views": "^0.13.9",
