--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "latest",
     "react-dom": "latest",
     "react-facebook": "^8.1.4",
+    "react-image-magnify": "^2.7.4",
+    "react-image-zoom": "^1.3.1",
     "react-material-ui-carousel": "^2.0.0",
+    "react-medium-image-zoom": "^4.3.1",
     "react-player": "^2.6.2",
     "react-swipeable-views": "^0.13.9",
     "yup": "^0.29.3"
