--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-material-ui-carousel": "^2.0.0",
     "react-medium-image-zoom": "^4.3.1",
     "react-player": "^2.6.2",
+    "react-redux": "^7.2.2",
     "react-swipeable-views": "^0.13.9",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "yup": "^0.29.3"
   },
   "scripts": {
