VVI - cookie are done for client and server also and most important is axios data fetching done

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@material-ui/system": "^4.9.14",
     "axios": "^0.21.0",
     "clsx": "latest",
+    "cookie": "^0.4.1",
+    "cookies": "^0.8.0",
     "date-fns": "^2.16.1",
     "formik": "^2.1.6",
     "formik-material-ui": "^3.0.0",
     "formik-material-ui-pickers": "^0.0.11",
+    "js-cookie": "^2.2.1",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
