--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-facebook": "^8.1.4",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
     "react-material-ui-carousel": "^2.0.0",
