--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-google-login": "^5.2.2",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
+    "react-loading": "^2.0.3",
     "react-material-ui-carousel": "^2.0.0",
     "react-medium-image-zoom": "^4.3.1",
     "react-player": "^2.6.2",
